# truth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  std-06.stdm  std-09.stdm  std-13.stdm  std-14.stdm  update-dumps-example.yaml  update-dumps.py
doc/: comparison-to-thtk.md  syntax.md
map/: README.md  any.anmm  any.eclm  any.msgm  any.stdm  debug.eclm  empty.eclm  empty.msgm  th06.eclm  th06.msgm  th06.stdm  th07.eclm  th07.stdm  th08.eclm  th095.stdm  th10.msgm  th11-scene.msgm  th11.msgm  th14.stdm  v0.anmm  v2.anmm  v3.anmm  v4.anmm  v8.anmm
scripts/: make-win-release.py
snapshots/: ecl_parser__fmt__tests__fancy_formatting__after_trigger.snap  ecl_parser__fmt__tests__fancy_formatting__after_trigger_point.snap  ecl_parser__fmt__tests__fancy_formatting__before_trigger_point.snap  ecl_parser__fmt__tests__fancy_formatting__fully_block.snap  ecl_parser__fmt__tests__fancy_formatting__fully_block_example.snap  ecl_parser__fmt__tests__fancy_formatting__fully_inline_example.snap  ecl_parser__fmt__tests__fancy_formatting__mixed_example.snap  ecl_parser__fmt__tests__fancy_formatting__mixed_style.snap  ecl_parser__fmt__tests__goto__no_time.snap  ecl_parser__fmt__tests__goto__with_time.snap  ecl_parser__fmt__tests__optional_parens__cond_block.snap  ecl_parser__fmt__tests__optional_parens__cond_jump.snap  ecl_parser__fmt__tests__optional_parens__while.snap  ecl_parser__fmt__tests__optional_parens__with.snap  ecl_parser__fmt__tests__time_formatting-2.snap  ecl_parser__fmt__tests__time_formatting-3.snap  ecl_parser__fmt__tests__time_formatting-4.snap  ecl_parser__fmt__tests__time_formatting.snap  ecl_parser__fmt__tests__time_formatting__after_neg.snap  ecl_parser__fmt__tests__time_formatting__compression.snap  ecl_parser__fmt__tests__time_formatting__general_1.snap  ecl_parser__fmt__tests__time_formatting__general_2.snap  ecl_parser__var__tests__basic_global.snap  ecl_parser__var__tests__basic_local.snap  ecl_parser__var__tests__err_adjacent_scope.snap  ecl_parser__var__tests__err_after_scope_end.snap  truth__diagnostic__unspanned.snap  truth__fmt__tests__fancy_formatting__before_trigger.snap  truth__fmt__tests__fancy_formatting__fully_inline.snap  truth__fmt__tests__optional_parens__without.snap  truth__parse__abi__tests__attr_only_comma.snap  truth__parse__abi__tests__attr_trailing_comma.snap  truth__parse__abi__tests__bad_token.snap  truth__parse__abi__tests__double_attr.snap  (+66 more)
(+876 files in other folders)
