[package]
name = "ecl-parser"
version = "0.1.0"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ['lexer'] }

[dependencies]
bstr = "0.2.14"
lazy_static = "1.4.0"
lalrpop-util = "0.19.0"
regex = "1"
getopts = "0.2.21"
indexmap = "1.6"
byteorder = "1.3"
thiserror = "1.0"
anyhow = "1.0"
codespan-reporting = "0.11"
codespan = "0.11"

[dev-dependencies]
insta = "1.3"

# This is used at build time, so optimizing it immensely speeds up debug builds.
[profile.dev.package.lalrpop]
opt-level = 3
