[package]
name = "truth"
version = "0.4.3"
authors = ["Michael Lamparski <diagonaldevice@gmail.com>"]
edition = "2018"
build = "build/main.rs"
default-run = "truth-core"
license = "Apache-2.0"

[build-dependencies]
lalrpop = { version = "0.19.5", features = ['lexer'] }

[dependencies]
lazy_static = "1.4.0"
lalrpop-util = "0.19.0"
regex = "1"
getopts = "0.2.21"
indexmap = "1.6.1"
byteorder = "1.3"
thiserror = "1.0"
codespan-reporting = "0.11"
codespan = "0.11"
enum-map = "0.6.4"
git-version = "0.3.4"
logos = "0.12"
encoding_rs = "0.8"
atty = "0.2"
walkdir = "2"
arrayvec = "0.7"
strum = {version = "0.22", features = ["derive"]}

[dependencies.image]
version = "0.23.14"
default-features = false
features = ['png', 'gif', 'bmp']

[dev-dependencies]
insta = "1.3"
tempfile = "3.0"
assert_cmd = "1.0"
predicates = "1.0"
rand = "0.7.3"

[profile.release]
debug = true

# This is used at build time, so optimizing it immensely speeds up debug builds.
[profile.dev.package.lalrpop]
opt-level = 3
